refactor: sales and customer logic
